--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "instagram",
+  "name": "cyberscreamer",
   "version": "1.0.0",
-  "description": "Instagram Unfollow Not FollowBack",
-  "main": "index.js",
+  "description": "Tools Instagram",
+  "author": "CCOCOT",
   "dependencies": {
-    "async-file": "^2.0.2",
-    "chalk": "^2.3.0",
+    "chalk": "^2.3.2",
+    "cli-spinner": "^0.2.7",
     "delay": "^2.0.0",
-    "download": "^6.2.5",
-    "download-file": "^0.1.5",
-    "inquirer": "^4.0.1",
+    "inquirer": "^4.0.2",
     "instagram-private-api": "^0.6.7",
+    "lodash": "^4.17.5",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
-  },
-  "author": "CCOCOT"
+  }
 }
